--- a/GamesEngine/Client/Primitive/index.html
+++ b/GamesEngine/Client/Primitive/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <div class="container py-4 px-3 mx-auto">
-            <canvas id="myCanvas"></canvas>
-            <script type="module" src="main.ts"></script>
+            <canvas id="myCanvas">
+                <script type="module" src="./main.ts"></script>
+            </canvas>
         </div>
     </body>
 </html>
